# cli-bible

./: README.md  pyproject.toml  requirements.txt
etc/: conf.json
src/cli_bible/: main.py  widgets.py
src/cli_bible/utils/: config.py  getter.py
